# RNE-wildbot

./: COMMANDS.md  NETWORK_SETUP.md  ROBOT_INTERFACE.md  WildBot實作方法介紹_資管之夜一定贏.md
wildbot_wheelctrl/: .arduino-cli.yaml  .gitignore  README.md  flash_esp32.sh  json_cmd.h  uart_ctrl.h  wildbot_wheelctrl.ino
wildbot_workspace/: .gitignore  COMMANDS.md  Dockerfile  README.md  README_kros_car.md  launch_ros2_package_example.sh  launch_shell.sh
wildbot_workspace/docker/compose/: .env  docker-compose_camera_gemini.yml  docker-compose_cmd_vel_relay.yml  docker-compose_foxglove_bridge.yml  docker-compose_kros_car.yml  docker-compose_lidar_pkg.yml  docker-compose_lidar_tf.yml  docker-compose_localization_wildbot.yml  docker-compose_navigation_wildbot.yml  docker-compose_odom_tf_bridge.yml  docker-compose_oradarlidar.yml  docker-compose_rosbridge_server.yml  docker-compose_scan_matcher.yml  docker-compose_slam_wildbot.yml  docker-compose_static_tf.yml  docker-compose_store_map_wildbot.yml
wildbot_workspace/docker/compose/configs/: controllers.yaml  hardware.yaml
wildbot_workspace/docker/compose/demo/: cmd_vel_relay.py  localization_wildbot.xml  (+6 more)
wildbot_workspace/maps/map01/: .gitkeep  map01.pgm  map01.yaml
wildbot_workspace/scripts/: 00_start_all.sh  01_mapping.sh  02_save_map.sh  03_localization_nav.sh  camera_gemini.sh  kros_car.sh  lidar.sh  restart_navigation.sh  rosbridge_server.sh  save_current_pose.sh  set_initial_pose.sh  stop_nav_stack.sh  utils.sh  verify_nav.sh
wildbot_workspace/workspaces/: frames_2026-05-22_15.54.43.gv  frames_2026-05-24_02.05.52.gv  frames_2026-05-24_02.10.38.gv  lidar_side_test.py  teleop_key.py
wildbot_workspace/workspaces/src/bear_grabber/: package.xml  setup.cfg  setup.py
wildbot_workspace/workspaces/src/bear_grabber/bear_grabber/: __init__.py  grab_and_return_node.py
wildbot_workspace/workspaces/src/bridge_mission/: package.xml  setup.cfg  setup.py
wildbot_workspace/workspaces/src/bridge_mission/bridge_mission/: __init__.py  bridge_mission_node.py
wildbot_workspace/workspaces/src/door_opener/: package.xml  setup.cfg  setup.py
wildbot_workspace/workspaces/src/door_opener/door_opener/: __init__.py  door_opener_node.py
wildbot_workspace/workspaces/src/wildbot_common/: package.xml  setup.cfg  setup.py
wildbot_workspace/workspaces/src/wildbot_common/wildbot_common/: __init__.py  gripper_controller.py  navigation_client.py  robot_state.py
workspace/pros/: OPEN_DOOR_GUIDE.md
workspace/pros/pros_app/: camera_calibration.sh  camera_gemini.sh  control.py  localization_unity.sh  ros_topic_bridge.sh  slam_unity.sh
workspace/pros/pros_car/: BEAR_MISSION.md  BRIDGE_NAVIGATION.md  BRIDGE_NAVIGATION_README.md  PHASE1_PLAN.md  README.md  car_control.sh
workspace/pros/ros2_yolo_integration/: .gitignore  Dockerfile.cyclone  yolo_activate.sh  yolo_activate_cu128.sh
(+81 files in other folders)
