<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bear_grabber</name>
  <version>0.1.0</version>
  <description>
    組員 A 負責：平地夾熊並帶回基地的任務節點。
  </description>
  <maintainer email="your@email.com">組員 A</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>wildbot_common</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
