<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_mission</name>
  <version>0.1.0</version>
  <description>
    組員 B 負責：上橋、抵達橋中點、夾取橋上的熊、下橋返回基地。
  </description>
  <maintainer email="your@email.com">組員 B</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>wildbot_common</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
