<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>door_opener</name>
  <version>0.1.0</version>
  <description>
    組員 C 負責：偵測門把、解鎖、將門推開至規定角度。
  </description>
  <maintainer email="your@email.com">組員 C</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>wildbot_common</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
